Wording update for YT importer

--- a/src/app/modules/media/youtube-migration/youtube-migration.component.html
+++ b/src/app/modules/media/youtube-migration/youtube-migration.component.html
@@ -19,9 +19,9 @@
     </div>
   </div>
   <div class="m-settingsV2__desc" *ngIf="!this.connected">
-    Transferring your video content from YouTube to Minds doesn’t need to be an
-    ordeal. Using our transfer tool, you can quickly and easily migrate your
-    content to Minds, and increase your audience even more.
+    Using our transfer tool, you can quickly and easily backup your videos on
+    Minds and increase your audience. Once your channel is connected all new
+    uploads to YouTube can automatically upload to Minds as well.
   </div>
   <ng-container
     *ngIf="!this.connected || (this.connected && channelTitle)"
