--- a/src/app/modules/channels/v2/shop/brief.component.html
+++ b/src/app/modules/channels/v2/shop/brief.component.html
@@ -8,7 +8,7 @@
       class="m-channelShopBriefTitle__text"
       i18n="CHANNEL_V2__BRIEF_WIRE_REWARD__SHOP__MEMBERSHIPS"
       [routerLink]="['/', service.username$ | async, 'shop']"
-      >Memberships</a
+      >Membership Tiers</a
     >
     <!-- <a
       class="m-channelShopBriefTitle__seeAll"
