--- a/src/app/modules/channels/v2/shop/brief.component.ng.scss
+++ b/src/app/modules/channels/v2/shop/brief.component.ng.scss
@@ -10,7 +10,7 @@
     // flex-direction: row;
     // align-items: center;
     // justify-content: space-between;
-    margin: 0 0 20px;
+    margin: 40px 0 20px;
 
     a.m-channelShopBriefTitle__text {
       cursor: pointer;
@@ -21,17 +21,6 @@
       // flex: 1;
       @include m-theme() {
         color: themed($m-textColor--primary);
-      }
-    }
-
-    .m-channelShopBriefTitle__seeAll {
-      font-size: 14px;
-      line-height: 19px;
-      text-decoration: underline;
-      font-weight: normal !important;
-
-      @include m-theme() {
-        color: themed($m-textColor--primary) !important;
       }
     }
   }
