--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.scss
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.scss
@@ -85,9 +85,24 @@ m-activity__toolbar {
     height: auto;
     min-width: unset;
     border-radius: 0;
-
-    font-weight: 500;
+    text-transform: unset;
     padding: 0;
+    margin-left: 8px;
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 0.7px;
+    cursor: pointer;
+    line-height: normal;
+
+    m-icon {
+      margin-left: 4px;
+      vertical-align: middle;
+
+      i {
+        font-size: 20px !important; // Override for fixed height.
+      }
+    }
+
     @include m-theme() {
       color: themed($m-textColor--secondary);
     }
@@ -97,11 +112,6 @@ m-activity__toolbar {
       @include m-theme() {
         border: 0;
       }
-    }
-
-    > m-icon {
-      margin-right: 5px;
-      vertical-align: middle;
     }
   }
 
