--- a/src/app/modules/blockchain/web3-modal/web3-modal.component.html
+++ b/src/app/modules/blockchain/web3-modal/web3-modal.component.html
@@ -1,24 +1,28 @@
-<div class="m-web3-modal__body m-modalV2__inner">
-  <h3 class="m-web3-modal__body-title">Connect Wallet</h3>
-  <div class="m-web3-modal__body-description-container">
-    <p>
-      To earn tokens and access the decentralized web, select an option below
-    </p>
-    <p class="m-web3-modal__body-description-gray">
-      (It's easier than you think)
-    </p>
+<div class="m-web3-modal m-modalV2__inner">
+  <div class="m-web3-modal__body m-modalV2__header">
+    <h3 class="m-web3-modal__body__title">Connect Wallet</h3>
+    <div class="m-web3-modal__body__description">
+      <p>
+        To earn tokens and access the decentralized web, select an option below
+      </p>
+      <p class="m-web3-modal__body__description--gray">
+        (It's easier than you think)
+      </p>
+    </div>
   </div>
-  <div class="m-web3-modal__provider-container">
-    <div
-      class="m-web3-modal__provider-wrapper"
-      *ngFor="let provider of providers"
-      (click)="provider.onClick()"
-    >
-      <div class="m-web3-modal__provider-icon">
-        <img [src]="provider.logo" [alt]="provider.logo" />
-      </div>
-      <div class="m-web3-modal__provider-name">
-        {{ provider.name }}
+  <div class="m-web3-modal__body m-modalV2__body">
+    <div class="m-web3-modal__body__provider">
+      <div
+        class="m-web3-modal__body__provider__body"
+        *ngFor="let provider of providers"
+        (click)="provider.onClick()"
+      >
+        <div class="m-web3-modal__body__provider__body__icon">
+          <img [src]="provider.logo" [alt]="provider.logo" />
+        </div>
+        <div class="m-web3-modal__body__provider__body__name">
+          {{ provider.name }}
+        </div>
       </div>
     </div>
   </div>
