fix nsfw guidelines link

--- a/src/app/modules/composer/components/popup/nsfw/nsfw.component.html
+++ b/src/app/modules/composer/components/popup/nsfw/nsfw.component.html
@@ -23,7 +23,8 @@
       class="m-composerPopup__smallNote"
       i18n="@@COMPOSER_NSFW__GUIDELINES_FURTHER_INFORMATION"
     >
-      See <a href="#">guidelines</a> for further information.
+      See our <a routerLink="/content-policy">Content Policy</a> for further
+      information.
     </p>
   </div>
 
