--- a/src/app/modules/settings-v2/other/referrals/referrals.component.html
+++ b/src/app/modules/settings-v2/other/referrals/referrals.component.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div
+<!-- <div
   class="m-settingsV2__desc"
   i18n="@@SETTINGS__OTHER__REFERRALS__DESCRIPTION"
 >
@@ -21,7 +21,7 @@
   shared with them, they’ll be added to your pending referrals. Once they sign
   up for the rewards program by setting up their Minds wallet, the referral is
   complete and you’ll both get +1 added to your contribution scores!
-</div>
+</div> -->
 
 <m-settingsV2__referralsLinks></m-settingsV2__referralsLinks>
 <m-settingsV2__referralsDashboard></m-settingsV2__referralsDashboard>
