--- a/src/app/modules/discovery/discovery.component.scss
+++ b/src/app/modules/discovery/discovery.component.scss
@@ -36,6 +36,7 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
+    word-break: break-word;
     @include m-theme() {
       color: themed($m-textColor--primary);
     }
