--- a/src/app/modules/blockchain/web3-modal/web3-modal.component.html
+++ b/src/app/modules/blockchain/web3-modal/web3-modal.component.html
@@ -1,26 +1,31 @@
-<div class="m-web3-modal m-modalV2__inner">
-  <div class="m-web3-modal__body m-modalV2__header">
-    <h3 class="m-web3-modal__body__title">Connect Wallet</h3>
-    <div class="m-web3-modal__body__description">
-      <p>
+<div class="m-web3Modal m-modalV2__inner">
+  <div class="m-web3Modal__header m-modalV2__header">
+    <h3 class="m-web3ModalHeader__title" i18n="@@WEB3_MODAL__CONNECT_WALLET">
+      Connect Wallet
+    </h3>
+    <div class="m-web3ModalHeader__description">
+      <p i18n="@@WEB3_MODAL__INSTRUCTION">
         To earn tokens and access the decentralized web, select an option below
       </p>
-      <p class="m-web3-modal__body__description--gray">
+      <p
+        class="m-web3ModalHeader__text--gray"
+        i18n="@@WEB3_MODAL__INSTRUCTION_GRAY"
+      >
         (It's easier than you think)
       </p>
     </div>
   </div>
-  <div class="m-web3-modal__body m-modalV2__body">
-    <div class="m-web3-modal__body__provider">
+  <div class="m-web3Modal__body m-modalV2__body">
+    <div class="m-web3ModalBody__provider">
       <div
-        class="m-web3-modal__body__provider__body"
+        class="m-web3ModalProvider__body"
         *ngFor="let provider of providers"
         (click)="provider.onClick()"
       >
-        <div class="m-web3-modal__body__provider__body__icon">
+        <div class="m-web3ModalProviderBody__icon">
           <img [src]="provider.logo" [alt]="provider.logo" />
         </div>
-        <div class="m-web3-modal__body__provider__body__name">
+        <div class="m-web3ModalProviderBody__name">
           {{ provider.name }}
         </div>
       </div>
