--- a/src/app/modules/newsfeed/activity/minimal-metrics/minimal-metrics.component.html
+++ b/src/app/modules/newsfeed/activity/minimal-metrics/minimal-metrics.component.html
@@ -9,7 +9,7 @@
   <ng-container *ngIf="entity.time_created && (views$ | async)">
     ·
   </ng-container>
-  <a href="canonicalUrl" target="_blank"
+  <a [href]="canonicalUrl" target="_blank"
     ><span
       *ngIf="!isScheduled()"
       class="m-activityMinimalMetrics__timestamp"
@@ -28,7 +28,7 @@
     class="m-activityMinimalMetrics__timestamp--scheduled"
   >
     <i class="material-icons">schedule</i>
-    <a href="canonicalUrl" target="_blank"
+    <a [href]="canonicalUrl" target="_blank"
       ><span>
         {{ toReadableDate(entity.time_created) }}
       </span></a
