Update src/app/modules/aux-pages/aux-pages.component.html, src/app/modules/aux-pages/aux-pages.component.ng.scss, src/app/modules/aux-pages/aux-pages.component.ts, src/app/modules/aux-pages/aux-pages.lazy.ts, src/app/modules/aux-pages/aux-pages.module.ts files

--- a/src/app/common/components/dropdown-menu/dropdown-menu.component.scss
+++ b/src/app/common/components/dropdown-menu/dropdown-menu.component.scss
@@ -19,7 +19,7 @@ m-dropdownMenu {
 
   .m-dropdownMenu__menu {
     display: none;
-    z-index: 1;
+    @include z-index(modal);
 
     @media screen and (min-width: $max-mobile + 1) {
       display: block;
