--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -67,15 +67,28 @@
             >
               Login
             </a>
-
-            <a
-              class="m-v3TopbarLoginWrapper__joinMindsNow"
-              routerLink="/register"
-              title="Join Minds Now"
-              i18n-title="@@COMMON__JOIN_MINDS_NOW"
+            <ng-container
+              *mIfFeature="'onboarding-october-2020'; else legacyButton"
             >
-              Join Minds Now
-            </a>
+              <a
+                class="m-v3TopbarLoginWrapper__joinMindsNow"
+                (click)="presentSignupModal()"
+                title="Join Minds Now"
+                i18n-title="@@COMMON__JOIN_MINDS_NOW"
+              >
+                Join Minds Now
+              </a>
+            </ng-container>
+            <ng-template #legacyButton>
+              <a
+                class="m-v3TopbarLoginWrapper__joinMindsNow"
+                routerLink="/register"
+                title="Join Minds Now"
+                i18n-title="@@COMMON__JOIN_MINDS_NOW"
+              >
+                Join Minds Now
+              </a>
+            </ng-template>
           </div>
         </ng-container>
 
