--- a/src/app/modules/onboarding-v3/panel/tags/tags.component.ng.scss
+++ b/src/app/modules/onboarding-v3/panel/tags/tags.component.ng.scss
@@ -2,6 +2,9 @@
 
 :host {
   margin: 60px 20px;
+  min-width: 725px;
+  display: flex;
+  flex-flow: column;
 
   .m-onboardingTags__header {
     display: flex;
