(chore): change minds+ composer text - closes #3957

--- a/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
@@ -1,17 +1,11 @@
 <div class="m-composerPopup__content m-formWrapper">
-  <p
-    class="m-composerPopup__subtitle"
-    i18n="@@COMPOSER__MONETIZE_PLUS_SUBHEADER"
-  >
-    Earn revenue for your creations
-  </p>
-
   <ng-container *ngIf="isPlus"
     ><p
       class="m-form__row--label m-composerPopup__text"
       i18n="@@COMPOSER__MONETIZE_PLUS__POOL_DESC"
     >
-      Submit this post to the Minds+ pool and earn potential revenue.
+      Submit this post to Minds+ members only and earn a share of our revenue
+      based on how it performs.
     </p>
 
     <div class="m-composerPopup__checkbox">
