(feat): do not show memberships tab if no memberships exists - closes #3964"

--- a/src/app/modules/composer/components/popup/popup.component.scss
+++ b/src/app/modules/composer/components/popup/popup.component.scss
@@ -27,7 +27,7 @@ m-composer__popup {
   left: 0;
   right: 0;
   bottom: auto;
-  min-height: 477px;
+  min-height: 360px; // Why is this needed?
   max-height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
