--- a/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
@@ -10,7 +10,10 @@
           >Minds+</a
         >
       </div>
-      <div class="m-tabs__tab">
+      <div
+        class="m-tabs__tab"
+        *ngIf="(hasSupportTiers$ | async) || !features.has('plus-2020')"
+      >
         <a
           [ngClass]="{ 'm-tabs__tab--selected': type === 'membership' }"
           (click)="type = 'membership'"
